@@ -347,6 +347,7 @@ public enum CassandraRelevantProperties
     MEMTABLE_OVERHEAD_SIZE("cassandra.memtable.row_overhead_size", "-1"),
     MEMTABLE_SHARD_COUNT("cassandra.memtable.shard.count"),
     MEMTABLE_TRIE_SIZE_LIMIT("cassandra.trie_size_limit_mb"),
+    @Deprecated
     METRICS_REPORTER_CONFIG_FILE("cassandra.metricsReporterConfigFile"),
     MIGRATION_DELAY("cassandra.migration_delay_ms", "60000"),
     /** Defines the maximum number of unique timed out queries that will be reported in the logs. Use a negative number to remove any limit. */
